@@ -1,3 +1,7 @@
+2006-09-01  Chong Yidong  <cyd@stupidchicken.com>
+
+	* imenu.el (imenu-update-menubar): Use buffer-chars-modified-tick.
+
 2006-08-31  Richard Stallman  <rms@gnu.org>
 
 	* cus-edit.el (custom-save-variables): Slight cleanup.
